Add ffprobe json (#26)
* do not use brew to install openai generator

* Fix api change

* Add original ffmprobe json
